[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team"
version = "0.1.0"
authors = [
    { name = "fortunestoldco", email = "fortunestoldco@users.noreply.github.com" },
]
description = "Hierarchical team agent implementation using LangGraph"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-openai>=0.1.22",
    "langchain>=0.2.14",
    "langchain-core>=0.1.22",
    "langchain-community>=0.2.17",
    "langchain-experimental>=0.0.52",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.4.0",
    "typing-extensions>=4.9.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/team"]

[tool.hatch.metadata]
allow-direct-references = true
